--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
+    <div id="app">
+        <button @click="generateMails">Genera</button>
+        <div class="mailContainer">
+            <ul>
+                <li v-for="mail in mailArray">
+                    {{ mail }}
+                </li>
+            </ul>
+        </div>
+    </div>
+    
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
