--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="app">
         <button @click="generateMails">Genera</button>
         <div class="mailContainer">
-            <ul>
+            <ul v-if="mailArray.length == 10">
                 <li v-for="mail in mailArray">
                     {{ mail }}
                 </li>
